--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
 
     <columnConstraints>
         <ColumnConstraints />
@@ -22,11 +21,11 @@
         <RowConstraints />
     </rowConstraints>
     <children>
-        <AnchorPane fx:id="mainPane" prefHeight="480.0" prefWidth="640.0">
+        <AnchorPane fx:id="mainPane" prefHeight="480.0" prefWidth="640.0" visible="false">
             <children>
-                <Button layoutX="441.0" layoutY="172.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="116.0" text="Check Students" />
-                <Button layoutX="441.0" layoutY="116.0" mnemonicParsing="false" onAction="#CreateNewClass" text="Create New Class" />
-                <Button layoutX="413.0" layoutY="240.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="116.0" text="Enter Class" />
+                <Button layoutX="441.0" layoutY="172.0" mnemonicParsing="false" onAction="#StudentHistoryBtn" prefHeight="27.0" prefWidth="116.0" text="Student History" />
+                <Button layoutX="441.0" layoutY="116.0" mnemonicParsing="false" onAction="#CreateNewClassBtn" text="Create New Class" />
+                <Button layoutX="413.0" layoutY="240.0" mnemonicParsing="false" onAction="#EnterClassBtn" prefHeight="27.0" prefWidth="116.0" text="Enter Class" />
                 <ComboBox fx:id="ClassComboBox" layoutX="245.0" layoutY="240.0" prefWidth="150.0" />
             </children></AnchorPane>
         <AnchorPane fx:id="createClassPane" prefHeight="200.0" prefWidth="200.0" visible="false">
@@ -41,7 +40,7 @@
                     </columns>
                 </TableView>
                 <Button layoutX="361.0" layoutY="355.0" mnemonicParsing="false" onAction="#AddNewStudentBtn" text="Add New Student" />
-                <Button layoutX="361.0" layoutY="403.0" mnemonicParsing="false" onAction="#SaveBtn" text="Save Class" />
+                <Button layoutX="361.0" layoutY="403.0" mnemonicParsing="false" onAction="#SaveClassBtn" text="Save Class" />
             <Button layoutX="501.0" layoutY="439.0" mnemonicParsing="false" onAction="#homeBtnAction" text="Back to Home Page" />
             </children>
         </AnchorPane>
@@ -55,14 +54,14 @@
                         <TableColumn fx:id="SHTDatesColumn" prefWidth="199.0" text="Date of past merits" />
                     </columns>
                 </TableView>
-                <Button layoutX="102.0" layoutY="393.0" mnemonicParsing="false" text="Back to Home Page" />
+                <Button layoutX="501.0" layoutY="439.0" mnemonicParsing="false" onAction="#homeBtnAction" text="Back to Home Page" />
                 <ComboBox fx:id="SHNameComboBox" layoutX="38.0" layoutY="159.0" prefWidth="150.0" promptText="Student Name" />
                 <ComboBox fx:id="SHSectionComboBox" layoutX="38.0" layoutY="123.0" prefWidth="150.0" promptText="Section" />
             </children>
         </AnchorPane>
-        <AnchorPane fx:id="enterClassPane" prefHeight="200.0" prefWidth="200.0" visible="false">
+        <AnchorPane fx:id="enterClassPane" prefHeight="200.0" prefWidth="200.0">
             <children>
-                <TableView fx:id="MeritTable" editable="true" fixedCellSize="4.0" layoutX="31.0" layoutY="21.0" prefHeight="395.0" prefWidth="551.0">
+                <TableView fx:id="MeritTable" editable="true" fixedCellSize="4.0" layoutX="31.0" layoutY="21.0" prefHeight="407.0" prefWidth="551.0">
                     <columns>
                         <TableColumn fx:id="MTStudentColumn" prefWidth="75.0" text="Student Name" />
                         <TableColumn fx:id="MT4WeeksColumn" prefWidth="75.0" text="Merits received in the las 4 weeks" />
@@ -73,11 +72,8 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
                 </TableView>
-                <ButtonBar layoutX="442.0" layoutY="302.0" prefHeight="40.0" prefWidth="140.0" />
-                <ButtonBar layoutX="379.0" layoutY="368.0" prefHeight="40.0" prefWidth="200.0" />
-                <Accordion layoutX="430.0" layoutY="136.0" />
-                <Button layoutX="431.0" layoutY="427.0" mnemonicParsing="false" onAction="#IntranetBtn" prefHeight="27.0" prefWidth="126.0" text="Send to Intranet" />
-                <Button layoutX="291.0" layoutY="427.0" mnemonicParsing="false" onAction="#homeBtnAction" text="Back to Home Page" />
+                <Button layoutX="366.0" layoutY="439.0" mnemonicParsing="false" onAction="#IntranetBtn" prefHeight="27.0" prefWidth="126.0" text="Send to Intranet" />
+                <Button layoutX="501.0" layoutY="439.0" mnemonicParsing="false" onAction="#homeBtnAction" text="Back to Home Page" />
             </children>
         </AnchorPane>
     </children>
