--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -21,7 +22,7 @@
         <RowConstraints />
     </rowConstraints>
     <children>
-        <AnchorPane fx:id="mainPane" prefHeight="480.0" prefWidth="640.0" visible="false">
+        <AnchorPane fx:id="mainPane" prefHeight="480.0" prefWidth="640.0">
             <children>
                 <Button layoutX="441.0" layoutY="172.0" mnemonicParsing="false" onAction="#StudentHistoryBtn" prefHeight="27.0" prefWidth="116.0" text="Student History" />
                 <Button layoutX="441.0" layoutY="116.0" mnemonicParsing="false" onAction="#CreateNewClassBtn" text="Create New Class" />
@@ -42,6 +43,8 @@
                 <Button layoutX="361.0" layoutY="355.0" mnemonicParsing="false" onAction="#AddNewStudentBtn" text="Add New Student" />
                 <Button layoutX="361.0" layoutY="403.0" mnemonicParsing="false" onAction="#SaveClassBtn" text="Save Class" />
             <Button layoutX="501.0" layoutY="439.0" mnemonicParsing="false" onAction="#homeBtnAction" text="Back to Home Page" />
+            <ChoiceBox fx:id="YearChoiceBox" layoutX="340.0" layoutY="63.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="SectionChoiceBox" layoutX="340.0" layoutY="94.0" prefWidth="150.0" />
             </children>
         </AnchorPane>
         <AnchorPane fx:id="studentHistoryPane" prefHeight="200.0" prefWidth="200.0" visible="false">
@@ -59,7 +62,7 @@
                 <ComboBox fx:id="SHSectionComboBox" layoutX="38.0" layoutY="123.0" prefWidth="150.0" promptText="Section" />
             </children>
         </AnchorPane>
-        <AnchorPane fx:id="enterClassPane" prefHeight="200.0" prefWidth="200.0">
+        <AnchorPane fx:id="enterClassPane" prefHeight="200.0" prefWidth="200.0" visible="false">
             <children>
                 <TableView fx:id="MeritTable" editable="true" fixedCellSize="4.0" layoutX="31.0" layoutY="21.0" prefHeight="407.0" prefWidth="551.0">
                     <columns>
